wip: Fix test running: add implicit exports module for jupiter module (gradle try run tests in module path, if without it) Some refactoring for module-info.java